# GPGPU-Waves

./: CMakeLists.txt  wave.cu
